--- a/www/index.html
+++ b/www/index.html
@@ -90,7 +90,7 @@
         </div>
         And this App Name:
         <div class="input-group">
-          <input type="text" readonly="true" aria-describedby="CopyAppName" id="AppName" class="form-control" value="BIM Export to Excel" />
+          <input type="text" readonly="true" aria-describedby="CopyAppName" id="AppName" class="form-control" value="BIAL" />
           <span class="input-group-addon" style="cursor: pointer" data-clipboard-target="#AppName" id="CopyAppName">Copy to clipboard</span>
         </div>
       </div>
