--- a/www/index.html
+++ b/www/index.html
@@ -76,7 +76,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Cancel"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Thanks for using BIM Export to Excel App!</h4>
+        <h4 class="modal-title">Thanks for using BIAL App!</h4>
       </div>
       <div class="modal-body">
         <p>To view your BIM 360 Docs files on this app please authorize my Forge Client ID with your BIM 360 Docs Account.</p>
